Último commit Ajustar backoffice y tienda a un  solo MVC

--- a/sami5-mvc-backoffice-qa/samishop-netcore-web-store/samishop-netcore-web-store/sami5-mvc-backoffice-qa.csproj
+++ b/sami5-mvc-backoffice-qa/samishop-netcore-web-store/samishop-netcore-web-store/sami5-mvc-backoffice-qa.csproj
@@ -9,6 +9,14 @@
     <RootNamespace>SamishopV2_Template_1</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <Optimize>True</Optimize>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <Optimize>False</Optimize>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="AngleSharp" Version="0.16.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
