--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,2 @@
-sami5-mvc-tienda-qa\samishop-netcore-web-store\samishop-netcore-web-store\obj
-sami5-mvc-tienda-qa\samishop-netcore-web-store\samishop-netcore-web-store\bin
-
-sami5-mvc-backoffice-qa\samishop-netcore-web-store\samishop-netcore-web-store\obj
-sami5-mvc-backoffice-qa\samishop-netcore-web-store\samishop-netcore-web-store\bin
+obj
+bin
