--- a/sami5-mvc-tienda-qa/samishop-netcore-web-store/samishop-netcore-web-store/appsettings.json
+++ b/sami5-mvc-tienda-qa/samishop-netcore-web-store/samishop-netcore-web-store/appsettings.json
@@ -7,6 +7,7 @@
   },
   "UrlCdnStorage": "https://s3.us-east-1.amazonaws.com/sami5tiendas.sami-shop.com", // https://s3.us-east-2.amazonaws.com/tiendas-samishop "D:/Git/Samishop/samishop-front-store"
   "UrlCdnStoragePrincipal": "https://s3.us-east-1.amazonaws.com/samishop5.s1a2m3i4.com",
+  "UrlPlantilla": "https://s3.us-east-1.amazonaws.com/plantilla-tienda-sami5",
   "UrlDefaultTemplate": "/templates/default-sami",
   "UrlApiCatalog": "https://api-inventario.sami-shop.com",
   "UrlApiAuth": "https://api-autenticacion.samishop.pe",
